Downgrade bundled PDFBox source from 4.0.0-SNAPSHOT to 3.0.5
Replace the vendored Apache PDFBox multi-module source tree with the
3.0.5 release source (apache/pdfbox tag 3.0.5), matching SAGE-v7.
Module layout (pdfbox/pdfbox) is unchanged.