@@ -31,7 +31,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Deque;
 import java.util.StringTokenizer;
-import java.util.stream.Collectors;
 
 import javax.xml.XMLConstants;
 import javax.xml.namespace.QName;
@@ -97,24 +96,11 @@ public class DomXmpParser
         }
     }
 
-    /**
-     * Tell if strict parsing mode is enabled.
-     *
-     * @return Whether strict parsing mode is enabled or not.
-     */
     public boolean isStrictParsing()
     {
         return strictParsing;
     }
 
-    /**
-     * Enable or disable strict parsing mode.
-     *
-     * @param strictParsing Whether to be strict or lenient when parsing XMP. True (the default)
-     * means that malformed XMP will result in an exception, false (lenient) means that if malformed
-     * content is encountered, the parser will continue its work if possible. Use strict mode if you
-     * want to work with PDF/A files. Use lenient mode if you care more about getting metadata.
-     */
     public void setStrictParsing(boolean strictParsing)
     {
         this.strictParsing = strictParsing;
@@ -137,26 +123,19 @@ public class DomXmpParser
         }
         catch (SAXException | IOException e)
         {
-            throw new XmpParsingException(ErrorType.Undefined, "Failed to parse: " + e.getMessage(), e);
+            throw new XmpParsingException(ErrorType.Undefined, "Failed to parse", e);
         }
 
         XMPMetadata xmp = null;
 
         // Start reading
-        removeCommentsAndBlanks(document);
+        removeComments(document);
         Node node = document.getFirstChild();
 
         // expect xpacket processing instruction
         if (!(node instanceof ProcessingInstruction))
         {
-            if (strictParsing)
-            {
-                throw new XmpParsingException(ErrorType.XpacketBadStart, "xmp should start with a processing instruction");
-            }
-            xmp = XMPMetadata.createXMPMetadata(XmpConstants.DEFAULT_XPACKET_BEGIN,
-                    XmpConstants.DEFAULT_XPACKET_ID, 
-                    XmpConstants.DEFAULT_XPACKET_BYTES,
-                    XmpConstants.DEFAULT_XPACKET_ENCODING);
+            throw new XmpParsingException(ErrorType.XpacketBadStart, "xmp should start with a processing instruction");
         }
         else
         {
@@ -183,11 +162,7 @@ public class DomXmpParser
         // expect xpacket end
         if (!(node instanceof ProcessingInstruction))
         {
-            if (strictParsing)
-            {
-                throw new XmpParsingException(ErrorType.XpacketBadEnd, "xmp should end with a processing instruction");
-            }
-            xmp.setEndXPacket(XmpConstants.DEFAULT_XPACKET_END);
+            throw new XmpParsingException(ErrorType.XpacketBadEnd, "xmp should end with a processing instruction");
         }
         else
         {
@@ -200,106 +175,33 @@ public class DomXmpParser
             throw new XmpParsingException(ErrorType.XpacketBadEnd,
                     "xmp should end after xpacket end processing instruction");
         }
-        // xpacket is OK and there are no more nodes
+        // xpacket is OK and the is no more nodes
         // Now, parse the content of root
-        nsFinder.push(root); // PDFBOX-6138: push namespaces in root
         Element rdfRdf = findDescriptionsParent(root);
-        nsFinder.push(rdfRdf); // PDFBOX-6099: push namespaces in rdf:RDF
-
-        // PDFBOX-6127: look for non standard namespaces (similar to PDFBOX-2378)
-        if (!strictParsing)
+        List<Element> descriptions = DomHelper.getElementChildren(rdfRdf);
+        List<Element> dataDescriptions = new ArrayList<>(descriptions.size());
+        for (Element description : descriptions)
         {
-            NamedNodeMap nnm = rdfRdf.getAttributes();
-            for (int i = 0; i < nnm.getLength(); i++)
+            Element first = DomHelper.getFirstChildElement(description);
+            if (first != null && "pdfaExtension".equals(first.getPrefix()))
             {
-                Attr attr = (Attr) nnm.item(i);
-                if (XMLConstants.XMLNS_ATTRIBUTE.equals(attr.getPrefix()))
-                {
-                    maybeAddNonStandardNamespace(xmp, attr);
-                }
+                PdfaExtensionHelper.validateNaming(xmp, description);
+                parseDescriptionRoot(xmp, description);
+            }
+            else
+            {
+                dataDescriptions.add(description);
             }
         }
-
-        List<Element> descriptions = DomHelper.getElementChildren(rdfRdf);
-        for (Element description : descriptions)
-        {
-            parseSchemaExtensions(xmp, description);
-        }
-
         // find schema description
-        PdfaExtensionHelper.populateSchemaMapping(xmp, strictParsing);
-
+        PdfaExtensionHelper.populateSchemaMapping(xmp);
         // parse data description
-        for (Element description : descriptions)
+        for (Element description : dataDescriptions)
         {
             parseDescriptionRoot(xmp, description);
         }
 
-        nsFinder.pop();
-        nsFinder.pop();
-
         return xmp;
-    }
-
-    private void maybeAddNonStandardNamespace(XMPMetadata xmp, Attr attr)
-    {
-        // xmlns:prefix="namespace"
-        TypeMapping tm = xmp.getTypeMapping();
-        String namespace = attr.getValue();
-        if (!XmpConstants.RDF_NAMESPACE.equals(namespace) &&
-            !tm.isStructuredTypeNamespace(namespace) &&
-            xmp.getSchema(namespace) == null && tm.getSchemaFactory(namespace) == null)
-        {
-            // PDFBOX-5128 / PDFBOX-6127: Add the schema on the fly if it can't be found
-            // PDFBOX-5649: But only if the namespace isn't already known
-            // because this adds a namespace without property descriptions
-            // PDFBOX-6127: never rdf
-            tm.addNewNameSpace(namespace, attr.getLocalName());
-        }
-    }
-
-    private boolean isSchemaExtensionProperty(final Element element)
-    {
-        return element != null && "pdfaExtension".equals(element.getPrefix());
-    }
-
-    private void parseSchemaExtensions(final XMPMetadata xmp, final Element description) throws XmpParsingException
-    {
-        final TypeMapping tm = xmp.getTypeMapping();
-        nsFinder.push(description);
-        try
-        {
-            final List<Element> schemaExtensions = DomHelper.getElementChildren(description)
-                    .stream()
-                    .filter(this::isSchemaExtensionProperty)
-                    .collect(Collectors.toList());
-            if (!schemaExtensions.isEmpty())
-            {
-                PdfaExtensionHelper.validateNaming(xmp, description);
-            }
-            for (final Element schemaExtension : schemaExtensions)
-            {
-                final String namespace = schemaExtension.getNamespaceURI();
-                if (!tm.isDefinedSchema(namespace))
-                {
-                    throw new XmpParsingException(ErrorType.NoSchema,
-                            "This namespace is not from a schema: " + namespace);
-                }
-                PropertyType type = checkPropertyDefinition(tm, DomHelper.getQName(schemaExtension), null);
-                final XMPSchema schema = tm.getSchemaFactory(namespace).createXMPSchema(xmp, schemaExtension.getPrefix());
-                loadAttributes(schema, description);
-                ComplexPropertyContainer container = schema.getContainer();
-                createProperty(xmp, schemaExtension, type, container);
-            }
-        }
-        catch (XmpSchemaException e)
-        {
-            throw new XmpParsingException(ErrorType.Undefined, "Parsing failed", e);
-        }
-        finally
-        {
-            nsFinder.pop();
-        }
     }
 
     private void parseDescriptionRoot(XMPMetadata xmp, Element description) throws XmpParsingException
@@ -314,16 +216,30 @@ public class DomXmpParser
             for (int i = 0; i < nnm.getLength(); i++)
             {
                 Attr attr = (Attr) nnm.item(i);
-                if (XmpConstants.ABOUT_NAME.equals(attr.getLocalName()) && 
-                    attr.getPrefix() == null || XmpConstants.DEFAULT_RDF_PREFIX.equals(attr.getPrefix()))
+                if (XmpConstants.DEFAULT_RDF_PREFIX.equals(attr.getPrefix())
+                        && XmpConstants.ABOUT_NAME.equals(attr.getLocalName()))
+                {
+                    // do nothing
+                }
+                else if (attr.getPrefix() == null && XmpConstants.ABOUT_NAME.equals(attr.getLocalName()))
                 {
                     // do nothing
                 }
                 else if (XMLConstants.XMLNS_ATTRIBUTE.equals(attr.getPrefix()))
                 {
-                    if (!strictParsing)
+                    String namespace = attr.getValue();
+                    if (!strictParsing && !tm.isStructuredTypeNamespace(namespace))
                     {
-                        maybeAddNonStandardNamespace(xmp, attr);
+                        // PDFBOX-5128: Add the schema on the fly if it can't be found
+                        // PDFBOX-5649: But only if the namespace isn't already known
+                        // because this adds a namespace without property descriptions
+                        String prefix = attr.getLocalName();
+
+                        XMPSchema schema = xmp.getSchema(namespace);
+                        if (schema == null && tm.getSchemaFactory(namespace) == null)
+                        {
+                            tm.addNewNameSpace(namespace, prefix);
+                        }
                     }
                 }
                 else
@@ -357,36 +273,15 @@ public class DomXmpParser
         if( schema != null )
         {
             ComplexPropertyContainer container = schema.getContainer();
-            PropertyType type = checkPropertyDefinition(tm,
-                    new QName(attr.getNamespaceURI(), attr.getLocalName(), attr.getPrefix()), null);
-
-            if (type == null)
+            PropertyType type = checkPropertyDefinition(xmp,
+                    new QName(attr.getNamespaceURI(), attr.getLocalName()));
+            
+            //Default to text if no type is found
+            if( type == null)
             {
-                if (strictParsing)
-                {
-                    throw new XmpParsingException(ErrorType.InvalidType, "No type defined for {" + attr.getNamespaceURI() + "}"
-                            + attr.getLocalName());
-                }
-                // PDFBOX-2318, PDFBOX-6106: Default to text if no type is found
                 type = TypeMapping.createPropertyType(Types.Text, Cardinality.Simple);
             }
-            else if (!type.type().isSimple() || type.card().isArray() || type.type() == Types.LangAlt)
-            {
-                if (strictParsing)
-                {
-                    throw new XmpParsingException(ErrorType.InvalidType, "The type '" +
-                            type.type().name() + "' in '" + attr.getPrefix() + ":" + attr.getLocalName() + "=" + attr.getValue()
-                            + "' is a structured or array type, but attributes are simple types");
-                }
-                // PDFBOX-6125: Default to text or skip
-                if (attr.getValue().isEmpty())
-                {
-                    schema.removeAttribute(attr.getLocalName());
-                    return;
-                }
-                type = TypeMapping.createPropertyType(Types.Text, Cardinality.Simple);
-            }
-
+            
             try
             {
                 AbstractSimpleProperty sp = tm.instanciateSimpleProperty(namespace, schema.getPrefix(),
@@ -409,16 +304,12 @@ public class DomXmpParser
         {
             nsFinder.push(property);
             String namespace = property.getNamespaceURI();
-            PropertyType type = checkPropertyDefinition(tm, DomHelper.getQName(property), null);
+            PropertyType type = checkPropertyDefinition(xmp, DomHelper.getQName(property));
             // create the container
             if (!tm.isDefinedSchema(namespace))
             {
                 throw new XmpParsingException(ErrorType.NoSchema,
-                        "This namespace is not from a schema: " + namespace);
-            }
-            if (isSchemaExtensionProperty(property))
-            {
-                continue;
+                        "This namespace is not a schema or a structured type : " + namespace);
             }
             XMPSchema schema = xmp.getSchema(namespace);
             if (schema == null)
@@ -450,8 +341,11 @@ public class DomXmpParser
                     throw new XmpParsingException(ErrorType.InvalidType, "No type defined for {" + namespace + "}"
                             + name);
                 }
-                // use it as string
-                manageSimpleType(xmp, property, Types.Text, container);
+                else
+                {
+                    // use it as string
+                    manageSimpleType(xmp, property, Types.Text, container);
+                }
             }
             else if (type.type() == Types.LangAlt)
             {
@@ -534,22 +428,15 @@ public class DomXmpParser
             Element inner = DomHelper.getFirstChildElement(property);
             if (inner != null)
             {
-                try
+                nsFinder.push(inner);
+                AbstractStructuredType ast = parseLiDescription(xmp, DomHelper.getQName(property), inner);
+                if (ast == null)
                 {
-                    nsFinder.push(inner);
-                    AbstractStructuredType ast = parseLiDescription(xmp, DomHelper.getQName(property), inner);
-                    if (ast == null)
-                    {
-                        throw new XmpParsingException(ErrorType.Format, "inner element should contain child elements : "
-                                + inner);
-                    }
-                    ast.setPrefix(prefix);
-                    container.addProperty(ast);
+                    throw new XmpParsingException(ErrorType.Format, "inner element should contain child elements : "
+                            + inner);
                 }
-                finally
-                {
-                    nsFinder.pop();
-                }
+                ast.setPrefix(prefix);
+                container.addProperty(ast);
             }
         }
     }
@@ -578,33 +465,17 @@ public class DomXmpParser
         if (bagOrSeq == null)
         {
             // not an array
-            Node firstChild = property.getFirstChild();
-            if (!strictParsing)
-            {
-                if (firstChild == null)
-                {
-                    // PDFBOX-6125: ignore
-                    return;
-                }
-                if (firstChild instanceof Text)
-                {
-                    // PDFBOX-6125: Default to text in lenient mode
-                    // Improvement idea in the future: create an array and add the text item.
-                    manageSimpleType(xmp, property, Types.Text, container);
-                    return;
-                }
-            }
             String whatFound = "nothing";
-            if (firstChild != null)
+            if (property.getFirstChild() != null)
             {
-                whatFound = firstChild instanceof Text ? "Text" : firstChild.getClass().getName();
+                whatFound = property.getFirstChild().getClass().getName();
             }
             throw new XmpParsingException(ErrorType.Format, "Invalid array definition, expecting " + type.card()
                     + " and found "
                     + whatFound
                     + " [prefix=" + prefix + "; name=" + name + "]");
         }
-        if (strictParsing && !bagOrSeq.getLocalName().equals(type.card().name()))
+        if (!bagOrSeq.getLocalName().equals(type.card().name()))
         {
             // not the good array type
             throw new XmpParsingException(ErrorType.Format, "Invalid array type, expecting " + type.card()
@@ -642,7 +513,7 @@ public class DomXmpParser
             for (Element property : properties)
             {
                 String name = property.getLocalName();
-                PropertyType dtype = checkPropertyDefinition(tm, DomHelper.getQName(property), null);
+                PropertyType dtype = checkPropertyDefinition(xmp, DomHelper.getQName(property));
                 PropertyType ptype = tm.getStructuredPropMapping(dtype.type()).getPropertyType(name);
                 // create property
                 createProperty(xmp, property, ptype, parentContainer);
@@ -659,63 +530,43 @@ public class DomXmpParser
     {
         if (DomHelper.isParseTypeResource(liElement))
         {
-            try
-            {
-                nsFinder.push(liElement);
-                return parseLiDescription(xmp, descriptor, liElement);
-            }
-            finally
-            {
-                nsFinder.pop();
-            }
+            return parseLiDescription(xmp, descriptor, liElement);
         }
         // will find rdf:Description
         Element liChild = DomHelper.getUniqueElementChild(liElement);
         if (liChild != null)
         {
-            try
-            {
-                nsFinder.push(liElement);
-                nsFinder.push(liChild);
-                return parseLiDescription(xmp, descriptor, liChild);
-            }
-            finally
-            {
-                nsFinder.pop();
-                nsFinder.pop();
-            }
-        }
-        // no child
-        String text = liElement.getTextContent();
-        TypeMapping tm = xmp.getTypeMapping();
-        if (type.isSimple())
-        {
-            AbstractField af = tm.instanciateSimpleProperty(descriptor.getNamespaceURI(),
-                    descriptor.getPrefix(), descriptor.getLocalPart(), text, type);
-            loadAttributes(af, liElement);
-            return af;
-        }
-        // PDFBOX-4325: assume it is structured
-        AbstractStructuredType af;
-        try
-        {
-            af = tm.instanciateStructuredType(type, descriptor.getLocalPart());
-        }
-        catch (BadFieldValueException ex)
-        {
-            throw new XmpParsingException(ErrorType.InvalidType, "Parsing of structured type failed", ex);
-        }
-        loadAttributes(af, liElement);
-        PropertiesDescription pm;
-        if (type.isStructured())
-        {
-            pm = tm.getStructuredPropMapping(type);
+            nsFinder.push(liChild);
+            return parseLiDescription(xmp, descriptor, liChild);
         }
         else
         {
-            pm = tm.getDefinedDescriptionByNamespace(liElement.getNamespaceURI(), liElement.getLocalName());
+            // no child
+            String text = liElement.getTextContent();
+            TypeMapping tm = xmp.getTypeMapping();
+            if (type.isSimple())
+            {
+                AbstractField af = tm.instanciateSimpleProperty(descriptor.getNamespaceURI(),
+                        descriptor.getPrefix(), descriptor.getLocalPart(), text, type);
+                loadAttributes(af, liElement);
+                return af;
+            }
+            else
+            {
+                // PDFBOX-4325: assume it is structured
+                AbstractField af;
+                try
+                {
+                    af = tm.instanciateStructuredType(type, descriptor.getLocalPart());
+                }
+                catch (BadFieldValueException ex)
+                {
+                    throw new XmpParsingException(ErrorType.InvalidType, "Parsing of structured type failed", ex);
+                }
+                loadAttributes(af, liElement);
+                return af;
+            }
         }
-        return tryParseAttributesAsProperties(tm, liElement, af, pm, null);
     }
 
     private void loadAttributes(AbstractField sp, Element element)
@@ -737,49 +588,38 @@ public class DomXmpParser
                     ((XMPSchema) sp).setAboutAsSimple(attr.getValue());
                 }
             }
-            else if (XMLConstants.XML_NS_URI.equals(attr.getNamespaceURI()))
+            else
             {
-                // This part was the fallback before PDFBOX-6130, now restricted:
-                // Do not load "ordinary" attributes here because these will be handled by
-                // tryParseAttributesAsProperties() and parseDescriptionRootAttr()
                 Attribute attribute = new Attribute(XMLConstants.XML_NS_URI, attr.getLocalName(), attr.getValue());
                 sp.setAttribute(attribute);
             }
         }
     }
 
-    private AbstractStructuredType parseLiDescription(XMPMetadata xmp, QName parentQName, Element liDescriptionElement)
+    private AbstractStructuredType parseLiDescription(XMPMetadata xmp, QName descriptor, Element liElement)
             throws XmpParsingException
     {
         TypeMapping tm = xmp.getTypeMapping();
-        List<Element> liDescriptionElementChildren = DomHelper.getElementChildren(liDescriptionElement);
-        if (liDescriptionElementChildren.isEmpty())
+        List<Element> elements = DomHelper.getElementChildren(liElement);
+        if (elements.isEmpty())
         {
             // The list is empty
-            return tryParseAttributesAsProperties(tm, liDescriptionElement, null, null, parentQName);
-        }
-        Element firstLiDescriptionElementChild = liDescriptionElementChildren.get(0);
-        if ("rdf:Description".equals(firstLiDescriptionElementChild.getTagName()))
-        {
-            // PDFBOX-6126: "<rdf:Description" as child of "<rdf:li"
-            return parseLiDescription(xmp, parentQName, firstLiDescriptionElementChild);
+            return null;
         }
         // Instantiate abstract structured type with hint from first element
-        nsFinder.push(firstLiDescriptionElementChild);
-        QName firstChildQName = DomHelper.getQName(firstLiDescriptionElementChild);
-        PropertyType ctype = checkPropertyDefinition(tm, firstChildQName, parentQName.getLocalPart());
+        Element first = elements.get(0);
+        nsFinder.push(first);
+        PropertyType ctype = checkPropertyDefinition(xmp, DomHelper.getQName(first));
         if (ctype == null)
         {
-            // PDFBOX-5649
-            throw new XmpParsingException(ErrorType.NoType,
-                    "Property '" + firstChildQName.getPrefix() + ":" + firstChildQName.getLocalPart() +
-                            "' not defined in " + firstChildQName.getNamespaceURI());
+            throw new XmpParsingException(ErrorType.NoType, "ctype is null, first: " + first + 
+                    ", DomHelper.getQName(first): " + DomHelper.getQName(first));
         }
         Types tt = ctype.type();
-        AbstractStructuredType ast = instanciateStructured(tm, tt, parentQName.getLocalPart(), firstLiDescriptionElementChild.getNamespaceURI());
+        AbstractStructuredType ast = instanciateStructured(tm, tt, descriptor.getLocalPart(), first.getNamespaceURI());
 
-        ast.setNamespace(firstLiDescriptionElementChild.getNamespaceURI());
-        ast.setPrefix(firstLiDescriptionElementChild.getPrefix());
+        ast.setNamespace(descriptor.getNamespaceURI());
+        ast.setPrefix(descriptor.getPrefix());
 
         PropertiesDescription pm;
         if (tt.isStructured())
@@ -788,33 +628,29 @@ public class DomXmpParser
         }
         else
         {
-            pm = tm.getDefinedDescriptionByNamespace(firstLiDescriptionElementChild.getNamespaceURI(), firstLiDescriptionElementChild.getLocalName());
+            pm = tm.getDefinedDescriptionByNamespace(first.getNamespaceURI());
         }
-        for (Element liDescriptionElementChild : liDescriptionElementChildren)
+        for (Element element : elements)
         {
-            String prefix = liDescriptionElementChild.getPrefix();
-            String name = liDescriptionElementChild.getLocalName();
-            String namespace = liDescriptionElementChild.getNamespaceURI();
+            String prefix = element.getPrefix();
+            String name = element.getLocalName();
+            String namespace = element.getNamespaceURI();
             PropertyType type = pm.getPropertyType(name);
             if (type == null)
             {
-                if (strictParsing)
-                {
-                    throw new XmpParsingException(ErrorType.NoType, "Type '" + prefix + ":" + name + "' not defined in "
-                            + liDescriptionElementChild.getNamespaceURI());
-                }
-                // PDFBOX-6135: Default to text if no type is found
-                type = TypeMapping.createPropertyType(Types.Text, Cardinality.Simple);
+                // not defined
+                throw new XmpParsingException(ErrorType.NoType, "Type '" + name + "' not defined in "
+                        + element.getNamespaceURI());
             }
-            if (type.card().isArray())
+            else if (type.card().isArray())
             {
                 ArrayProperty array = tm.createArrayProperty(namespace, prefix, name, type.card());
                 ast.getContainer().addProperty(array);
-                Element bagOrSeq = DomHelper.getUniqueElementChild(liDescriptionElementChild);
+                Element bagOrSeq = DomHelper.getUniqueElementChild(element);
                 List<Element> lis = DomHelper.getElementChildren(bagOrSeq);
                 for (Element element2 : lis)
                 {
-                    AbstractField ast2 = parseLiElement(xmp, parentQName, element2, type.type());
+                    AbstractField ast2 = parseLiElement(xmp, descriptor, element2, type.type());
                     if (ast2 != null)
                     {
                         array.addProperty(ast2);
@@ -824,8 +660,8 @@ public class DomXmpParser
             else if (type.type().isSimple())
             {
                 AbstractSimpleProperty sp = tm.instanciateSimpleProperty(namespace, prefix, name,
-                        liDescriptionElementChild.getTextContent(), type.type());
-                loadAttributes(sp, liDescriptionElementChild);
+                        element.getTextContent(), type.type());
+                loadAttributes(sp, element);
                 ast.getContainer().addProperty(sp);
             }
             else if (type.type().isStructured())
@@ -836,13 +672,13 @@ public class DomXmpParser
                 inner.setPrefix(prefix);
                 ast.getContainer().addProperty(inner);
                 ComplexPropertyContainer cpc = inner.getContainer();
-                if (DomHelper.isParseTypeResource(liDescriptionElementChild))
+                if (DomHelper.isParseTypeResource(element))
                 {
-                    parseDescriptionInner(xmp, liDescriptionElementChild, cpc);
+                    parseDescriptionInner(xmp, element, cpc);
                 }
                 else
                 {
-                    Element descElement = DomHelper.getFirstChildElement(liDescriptionElementChild);
+                    Element descElement = DomHelper.getFirstChildElement(element);
                     if (descElement != null)
                     {
                         parseDescriptionInner(xmp, descElement, cpc);
@@ -851,12 +687,11 @@ public class DomXmpParser
             }
             else
             {
-                throw new XmpParsingException(ErrorType.NoType, "Unidentified element to parse " + liDescriptionElementChild + " (type="
+                throw new XmpParsingException(ErrorType.NoType, "Unidentified element to parse " + element + " (type="
                         + type + ")");
             }
 
         }
-        ast = tryParseAttributesAsProperties(tm, liDescriptionElement, ast, pm, parentQName);
         nsFinder.pop();
         return ast;
     }
@@ -877,7 +712,7 @@ public class DomXmpParser
         while (tokens.hasMoreTokens())
         {
             String token = tokens.nextToken();
-            if (!token.endsWith("\"") && !token.endsWith("'"))
+            if (!token.endsWith("\"") && !token.endsWith("\'"))
             {
                 throw new XmpParsingException(ErrorType.XpacketBadStart, "Cannot understand PI data part : '" + token
                         + "' in '" + data + "'");
@@ -931,7 +766,7 @@ public class DomXmpParser
             if (end != 'r' && end != 'w')
             {
                 throw new XmpParsingException(ErrorType.XpacketBadEnd,
-                        "Expected xpacket 'end' attribute with value 'r' or 'w' ");
+                        "Excepted xpacket 'end' attribute with value 'r' or 'w' ");
             }
             else
             {
@@ -942,26 +777,18 @@ public class DomXmpParser
         {
             // should find end='r/w'
             throw new XmpParsingException(ErrorType.XpacketBadEnd,
-                    "Expected xpacket 'end' attribute (must be present and placed in first)");
+                    "Excepted xpacket 'end' attribute (must be present and placed in first)");
         }
     }
 
     private Element findDescriptionsParent(Element root) throws XmpParsingException
     {
-        Element rdfRdf = null;
+        Element rdfRdf;
         // check if already rdf element, as xmpmeta wrapper can be optional
         if (!XmpConstants.RDF_NAMESPACE.equals(root.getNamespaceURI()))
         {
             // always <x:xmpmeta xmlns:x="adobe:ns:meta/">
-            if (!strictParsing && "xapmeta".equals(root.getLocalName()))
-            {
-                // older XMP content
-                expectNaming(root, "adobe:ns:meta/", "x", "xapmeta");
-            }
-            else
-            {
-                expectNaming(root, "adobe:ns:meta/", "x", "xmpmeta");
-            }
+            expectNaming(root, "adobe:ns:meta/", "x", "xmpmeta");
             // should only have one child
             NodeList nl = root.getChildNodes();
             if (nl.getLength() == 0)
@@ -977,7 +804,7 @@ public class DomXmpParser
             else if (!(root.getFirstChild() instanceof Element))
             {
                 // should be an element
-                throw new XmpParsingException(ErrorType.Format, "x:xmpmeta does not contains rdf:RDF element but " + root.getFirstChild());
+                throw new XmpParsingException(ErrorType.Format, "x:xmpmeta does not contains rdf:RDF element");
             } // else let's parse
             rdfRdf = (Element) root.getFirstChild();
         }
@@ -1013,43 +840,45 @@ public class DomXmpParser
     }
 
     /**
-     * Remove all the comments and blank nodes in the parent element of the parameter
-     *
-     * @param root the first node of an element or document to clear
+     * Remove all the comments node in the parent element of the parameter
+     * 
+     * @param root
+     *            the first node of an element or document to clear
      */
-    private void removeCommentsAndBlanks(Node root)
+    private void removeComments(Node root)
     {
-        // will hold the nodes which are to be deleted
-        List<Node> forDeletion = new ArrayList<>();
-
-        NodeList nl = root.getChildNodes();
-
-        if (!(root instanceof Document) && nl.getLength() <= 1)
+    	// will hold the nodes which are to be deleted
+    	List<Node> forDeletion = new ArrayList<>();
+    	
+    	NodeList nl = root.getChildNodes();
+    	
+        if (nl.getLength()<=1) 
         {
-            // There is only one node so we're done, except when Document
+            // There is only one node so we do not remove it
             return;
         }
-
-        for (int i = 0; i < nl.getLength(); i++)
+        
+        for (int i = 0; i < nl.getLength(); i++) 
         {
             Node node = nl.item(i);
             if (node instanceof Comment)
             {
                 // comments to be deleted
-                forDeletion.add(node);
+            	forDeletion.add(node);
             }
             else if (node instanceof Text)
             {
-                if (node.getTextContent().isBlank())
+                if (node.getTextContent().trim().isEmpty())
                 {
-                    // empty text nodes to be deleted
-                    forDeletion.add(node);
+                	// TODO: verify why this is necessary
+                	// empty text nodes to be deleted
+                	forDeletion.add(node);
                 }
             }
             else if (node instanceof Element)
             {
                 // clean child
-                removeCommentsAndBlanks(node);
+                removeComments(node);
             } // else do nothing
         }
 
@@ -1081,119 +910,30 @@ public class DomXmpParser
         }
     }
 
-    private PropertyType checkPropertyDefinition(TypeMapping tm, QName qName, String parentTypeName) throws XmpParsingException
+    private PropertyType checkPropertyDefinition(XMPMetadata xmp, QName prop) throws XmpParsingException
     {
+        TypeMapping tm = xmp.getTypeMapping();
         // test if namespace is set in xml
-        String nsuri = qName.getNamespaceURI();
-        if (!nsFinder.containsNamespace(nsuri))
+        if (!nsFinder.containsNamespace(prop.getNamespaceURI()))
         {
             throw new XmpParsingException(ErrorType.NoSchema, "Schema is not set in this document : "
-                    + nsuri + ", property: " + qName.getPrefix() + ":" + qName.getLocalPart());
+                    + prop.getNamespaceURI());
         }
         // test if namespace is defined
+        String nsuri = prop.getNamespaceURI();
         if (!tm.isDefinedNamespace(nsuri))
         {
             throw new XmpParsingException(ErrorType.NoSchema, "Cannot find a definition for the namespace "
-                    + nsuri + ", property: " + qName.getPrefix() + ":" + qName.getLocalPart());
+                    + prop.getNamespaceURI());
         }
         try
         {
-            return tm.getSpecifiedPropertyType(qName, parentTypeName);
+            return tm.getSpecifiedPropertyType(prop);
         }
         catch (BadFieldValueException e)
         {
-            throw new XmpParsingException(ErrorType.InvalidType, "Failed to retrieve property definition for " + qName, e);
+            throw new XmpParsingException(ErrorType.InvalidType, "Failed to retrieve property definition", e);
         }
-    }
-
-    /**
-     * This attempts to run the same logic as in parseLiDescription() but with simple attributes
-     * that will be treated like children. This is inspired by loadAttributes() and
-     * parseDescriptionRootAttr(). This solves the problem in PDFBOX-3882 where properties appear as
-     * attributes in places lower than the descriptor root.
-     *
-     * @param tm
-     * @param liElement
-     * @param ast An AbstractStructuredType object, can be null.
-     * @param pm A PropertiesDescription object, must be set if ast is not null.
-     * @param qName QName of the parent, will be used if instantiating an AbstractStructuredType
-     * object, must be set if ast is not null.
-     * @return An AbstractStructuredType, possibly created here if it was null as parameter.
-     * @throws XmpParsingException
-     */
-    private AbstractStructuredType tryParseAttributesAsProperties(
-            TypeMapping tm, Element liElement, AbstractStructuredType ast,
-            PropertiesDescription pm, QName qName) throws XmpParsingException
-    {
-        NamedNodeMap attributes = liElement.getAttributes();
-        for (int i = 0; i < attributes.getLength(); ++i)
-        {
-            Attr attr = (Attr) attributes.item(i);
-            if (XMLConstants.XMLNS_ATTRIBUTE.equals(attr.getPrefix()) ||
-                XMLConstants.XML_NS_URI.equals(attr.getNamespaceURI()) ||
-                XmpConstants.DEFAULT_RDF_PREFIX.equals(attr.getPrefix()))
-            {
-                // do nothing
-                continue;
-            }
-            if (ast == null && attr.getNamespaceURI() != null) // What to do if attr.getNamespaceURI() is null?
-            {
-                // like in parseLiDescription():
-                // Instantiate abstract structured type with hint from first element
-                QName attrQName = new QName(attr.getNamespaceURI(), attr.getLocalName(), attr.getPrefix());
-                PropertyType ctype = checkPropertyDefinition(tm, attrQName, null);
-                // this is the type of the AbstractStructuredType, not of the element(s)
-                if (ctype == null)
-                {
-                    throw new XmpParsingException(ErrorType.NoType,
-                        "Property '" + attrQName.getLocalPart() + "' not defined in " + attrQName.getNamespaceURI());
-                }
-                Types tt = ctype.type();
-                ast = instanciateStructured(tm, tt, qName.getLocalPart(), attr.getNamespaceURI());
-                if (tt.isStructured())
-                {
-                    pm = tm.getStructuredPropMapping(tt);
-                }
-                else
-                {
-                    pm = tm.getDefinedDescriptionByNamespace(attr.getNamespaceURI(), attr.getLocalName());
-                }
-            }
-            if (ast != null && pm != null && attr.getNamespaceURI() != null)
-            {
-                PropertyType type = pm.getPropertyType(attr.getLocalName());
-                if (type == null)
-                {
-                    if (strictParsing)
-                    {
-                        throw new XmpParsingException(ErrorType.InvalidType, "No type defined for {" + attr.getNamespaceURI() + "}"
-                                + attr.getLocalName());
-                    }
-                    // PDFBOX-2318, PDFBOX-6106: Default to text if no type is found
-                    type = TypeMapping.createPropertyType(Types.Text, Cardinality.Simple);
-                }
-                else if (!type.type().isSimple() || type.card().isArray() || type.type() == Types.LangAlt)
-                {
-                    if (strictParsing)
-                    {
-                        throw new XmpParsingException(ErrorType.InvalidType, "The type '" +
-                                type.type().name() + "' in '" + attr.getPrefix() + ":" + attr.getLocalName() + "=" + attr.getValue()
-                                + "' is a structured or array type, but attributes are simple types");
-                    }
-                    // PDFBOX-6125: Default to text or skip
-                    if (attr.getValue().isEmpty())
-                    {
-                        continue;
-                    }
-                    type = TypeMapping.createPropertyType(Types.Text, Cardinality.Simple);
-                }
-                AbstractSimpleProperty asp = tm.instanciateSimpleProperty(
-                        attr.getNamespaceURI(), attr.getPrefix(), attr.getLocalName(),
-                        attr.getValue(), type.type());
-                ast.getContainer().addProperty(asp);
-            }
-        }
-        return ast;
     }
 
     protected static class NamespaceFinder
@@ -1211,6 +951,11 @@ public class DomXmpParser
                 if (XMLConstants.XMLNS_ATTRIBUTE_NS_URI.equals(no.getNamespaceURI()))
                 {
                     map.put(no.getLocalName(), no.getValue());
+                }
+                else if (no.getNamespaceURI() != null && no.getPrefix() != null)
+                {
+                    // PDFBOX-5976
+                    map.put(no.getPrefix(), no.getNamespaceURI());
                 }
             }
             stack.push(map);
